fixing layout issues

--- a/public/src/app/app.component.css
+++ b/public/src/app/app.component.css
@@ -1,9 +1,9 @@
 .pf-container {
   display: flex;
-  height: 100vh;
+  height: auto;
   width: 100vw;
-  max-width: 100vw;
   margin: 0;
+  overflow-x: hidden;
 }
 
 
