--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -19,7 +19,6 @@ body {
   padding: 0px;
   margin: 0px;
   font-family: delicious;
-  overflow-x: hidden;
 }
 
 .spin {
